@@ -3,6 +3,7 @@
     * src/sndfile-spectrogram.c
     Initialize colour to black so it writes black instead of random values from
     the stack.
+    Add a --dyn-range=XXX command line option to set spectrogram dynamic range.
 
     * src/sndfile-merge.c
     New program contributed by Jonatan Liljedahl that takes two mono files and
